<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_header_text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Switch
            android:id="@+id/switch_alert_movimento"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/settings_switch_alert_movimento" />

        <Switch
            android:id="@+id/switch_silenzioso"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/settings_switch_silenzioso" />

        <Switch
            android:id="@+id/switch_non_distubare"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/settings_switch_non_disturbare" />

        <Switch
            android:id="@+id/switch_connessione"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/settings_switch_blocca_connessione" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>