<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <NumberPicker
        android:id="@+id/relax_timer"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/studio_timer"
        app:layout_constraintTop_toBottomOf="@+id/relax_timer_text" />

    <NumberPicker
        android:id="@+id/studio_timer"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/relax_timer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studio_timer_text" />

    <Spinner
        android:id="@+id/dropdown_salvati"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pomodoro_salvati_text"
        android:background="@drawable/border_shape"
        />

    <Button
        android:id="@+id/start_button"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="108dp"
        android:text="@string/start_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/dropdown_salvati"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="#000000"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/studio_timer_text"
        android:layout_width="60dp"
        android:layout_height="18dp"
        android:layout_marginTop="64dp"
        android:text="@string/studio_tv_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/relax_timer_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/relax_timer_text"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:layout_marginTop="64dp"
        android:text="@string/relax_tv_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/studio_timer_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/indice_equilibrio"
        android:layout_width="230dp"
        android:layout_height="21dp"
        android:layout_marginTop="24dp"
        android:text="@string/equilibro_text_1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studio_timer" />

    <TextView
        android:id="@+id/pomodoro_salvati_text"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/pomodoro_salvati_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indice_equilibrio" />

    <Button
        android:id="@+id/salva_preset_button"
        android:layout_width="120dp"
        android:layout_height="28dp"
        android:includeFontPadding="false"
        android:padding="0dp"
        android:text="@string/salva_preset_button_text"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdown_salvati"
        app:layout_constraintVertical_bias="0.162"
        tools:textSize="11sp" />

</androidx.constraintlayout.widget.ConstraintLayout>